[gd_scene load_steps=4 format=3 uid="uid://bn4533emn1xoi"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_k8tap"]
[ext_resource type="Texture2D" uid="uid://dvsst2pou200a" path="res://Assets/robot_player.png" id="2_ppub3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_abmer"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_k8tap")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_abmer")

[node name="FlipBody" type="Marker2D" parent="."]

[node name="FirePoint" type="Marker2D" parent="FlipBody"]
position = Vector2(18, -4)

[node name="Sprite2D" type="Sprite2D" parent="FlipBody"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ppub3")

[node name="key_point" type="Marker2D" parent="."]

[node name="hat_point" type="Marker2D" parent="."]
position = Vector2(0, -22)

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
